# spurs

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  spurs.opam
.github/workflows/: ci.yml
docs/: index.html
docs/sprs/: index.html
docs/sprs/Sprs/: index.html
docs/sprs/Sprs/Array_utils/: index.html
docs/sprs/Sprs/Csmat/: index.html
docs/sprs/Sprs/Csvec/: index.html
docs/sprs/Sprs/Indptr/: index.html
docs/sprs/Sprs/Sparse/: index.html
docs/sprs/Sprs/Sparse/Cs_mat_base/: index.html
docs/sprs/Sprs/Sparse/Cs_tri_base/: index.html
docs/sprs/Sprs/Sparse/Cs_vec_base/: index.html
docs/sprs/Sprs/Sparse/Dynarray/: index.html
docs/sprs/Sprs/Sparse/Nnz_index/: index.html
docs/sprs/Sprs/Sparse/Utils/: index.html
lib/: common.ml  csmat.ml  csmat.mli  cstri.ml  csvec.ml  csvec.mli  dune  indptr.ml  ops.ml  ops.mli  sparse.ml  utils.ml
sprs/: dune-project  sprs.opam  todo.md
sprs/lib/: array_utils.ml  csmat.ml  dune  indptr.ml  sparse.ml  vec.ml
sprs/test/: dune  test_csmat.ml  test_csvec.ml  test_indptr.ml  test_sparse.ml
test/: dune  generators.ml  prop_csmat.ml  prop_ops.ml  test_csmat.ml  test_csvec.ml  test_indptr.ml  test_ops.ml  test_sparse.ml
