(lang dune 3.17)

(name sprs)

(generate_opam_files true)

(subst disabled)

(source
 (github nikhil-kamath/sprs))

(authors "Nikhil Kamath <nikhil.k123234@gmail.com>")

(maintainers "Nikhil Kamath <nikhil.k123234@gmail.com")

(license MIT)

(documentation https://nikhil-kamath.github.io/sprs-ocaml/)

(package
 (name sprs)
 (version 0.1.0)
 (synopsis "A lightweight native sparse matrix library")
 (depends
  ocaml
  ppx_deriving
  ppx_fields_conv
  (alcotest :with-test))
 (tags
  ("sparse" "matrices")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
